# owls

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README  README.md  ReleaseNotes.md  _typos.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: bot-base.sh  bot-pr-base.sh  bot-pr-format-base.sh  format.sh
.github/workflows/: main.yml  pr-formatting.yml  python-package.yml  typo_check.yml
FoamAna/: __init__.py  ana.py  analysis.py  case.py  particleHelperFunctions.py  plot.py  read_files.py  version.py
Owls/: FoamFrame.py  MultiFrame.py  Parsing.py  __init__.py  ana.py  foam.py  frames.py  io.py  mesh.py  mplinterface.py  plot.py  version.py
examples/: Owls Demo.ipynb  Salar Demo.ipynb  Untitled0.ipynb  example.ipynb  generateExampleCase.sh
examples/.ipynb_checkpoints/: Owls Demo-checkpoint.ipynb
examples/Dash/: dash.py
examples/Dash/templates/: test.html
examples/buoyantCavity/: log
examples/buoyantCavity/0/: T  U  alphat  epsilon  k  mut  omega  p  p_rgh
examples/buoyantCavity/100/: T  U  alphat  k  mut  omega  p  p_rgh  phi
examples/buoyantCavity/1000/: T  U  alphat  k  mut  omega  p  p_rgh  phi
examples/buoyantCavity/150/: T  U  alphat  k  mut  omega  p  p_rgh  phi
examples/buoyantCavity/200/: T  U  alphat  k  mut  omega  p  p_rgh  phi
examples/buoyantCavity/250/: T  U  alphat  k  mut  omega  p  p_rgh  phi
examples/buoyantCavity/300/: T  U  alphat  k  mut  omega  p  p_rgh  phi
scripts/: install-debian.sh  snap.py  travis-install
src/: __init__.py  foam.py  io.py  plot.py
src/Owls/: FoamDictParser.py  LogFileParser.py
tests/: log  old.py  test.py  test_dictParser.py  test_findermethods.py  test_imports.py  test_integration.py  test_logParser.py  test_parser.py  test_readmethods.py  test_standalone_parser.py
(+525 files in other folders)
