[project]
name = "Owls"
authors = [{name = "greole", email = "go@hpsim.de"}]
dynamic = ["version", "description"]

dependencies = [
 "pandas",
 "numpy",
 "functional",
 "pyparsing"
]

[project.optional-dependencies]
doc = [
    "sphinx~=4.2.0",
    "sphinx-autoapi",
    "myst_parser",
]

[tool.black]
preview = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
