[metadata]
name = Owls
version = 0.11.0
author = Gregor Olenik,
author_email=go@hpsim.de,

description = Owls is a collection of python tools for data analysis of OpenFOAM cases
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent"


[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
